samples/_failures_safe/1761430756_bc233a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3c469cbd.c: In function ‘main’:
./samples/SAFE/__tmp_3c469cbd.c:156: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_3c469cbd.c:155:9: note: to match this ‘{’
  155 |         {1, 100
      |         ^
./samples/SAFE/__tmp_3c469cbd.c:155:9: error: expected declaration or statement at end of input
